# mate-xfce4-panel-plugin-loader-applet

./: .gitignore  AUTHORS  ChangeLog  README.md  autogen.sh  configure.ac
po/: POTFILES.in  de.po  pl.po
src/: Makefile.am  mate-xfce4-panel-plugin-loader-applet.c  org.mate.Xfce4PanelPluginLoader.Applet.mate-panel-applet.in.in  org.mate.panel.applet.Xfce4PanelPluginLoader.gschema.xml.in  org.mate.panel.applet.Xfce4PanelPluginLoaderFactory.service.in
